...
                                                    <rect key="frame" x="342" y="4" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="IDl-qw-saf"/>
                                                        <constraint firstAttribute="width" constant="44" id="hXz-mW-UGW"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="offActive"/>
                                                </button>
                                            </subviews>
                                            <color key="backgroundColor" name="YP Black"/>
                                            <constraints>
                                                <constraint firstItem="QKE-T3-m0B" firstAttribute="leading" secondItem="dI8-xh-UfJ" secondAttribute="leading" id="8mI-1n-Rhb"/>
                                                <constraint firstAttribute="bottom" secondItem="dI8-xh-UfJ" secondAttribute="bottom" constant="4" id="Acm-FE-cKb"/>
...
                                <rect key="frame" x="171" y="407" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="EIR-AT-G3f"/>
                                    <constraint firstAttribute="width" constant="60" id="mLJ-fm-v4d"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rrd-Bb-kIo">
                                <rect key="frame" x="16" y="702" width="370" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Hcv-da-rJU"/>
                                </constraints>
...
            </objects>
            <point key="canvasLocation" x="-17994" y="-1027"/>
        </scene>
        <!--Web View View Controller-->
        <scene sceneID="uzH-iK-oqI">
            <objects>
                <viewController restorationIdentifier="WebViewViewController" storyboardIdentifier="WebViewViewController" id="d1a-Wm-5Vi" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="MYN-T4-Zwn">
                        <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d4Y-C9-XL2">
                                <rect key="frame" x="16" y="53" width="370" height="821"/>
...
