...
        
        gL.colors = [UIColor.ypBlack.withAlphaComponent(0.0).cgColor, UIColor.ypBlack.withAlphaComponent(0.2).cgColor]
        gL.frame = gradient.bounds
        gradient.layer.addSublayer(gL)
        
        likeButton.addTarget(self, action: #selector(likeButtonTappedAction), for: .touchUpInside)
//        likeButton.accessibilityIdentifier = "likeButtonTap"
    }

    func configCell(isLike: Bool, date: String) {
        
        let likeOnImage = isLike ? UIImage.onActive : UIImage.offActive
        likeButton.setImage(likeOnImage, for: .normal)
...
